--- a/sketch_220922c/index.html
+++ b/sketch_220922c/index.html
@@ -6,7 +6,8 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="sketch_220921c.js"></script>
+  <script language="javascript" type="text/javascript" src="tab2.js"></script>
+  <script language="javascript" type="text/javascript" src="sketch_220922c.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
